# LVSA

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
benchmarks/: README.md  aggregate.py  generate_figures.py  latency_scaling.sh  long_prompts.json  score_vbench.sh  score_vqeval.sh  sota_comparison.sh
benchmarks/results/: paper_results_means.csv
docs/: VLLM_OMNI_INTEGRATION.md  architecture.md  install.md  quickstart.md  troubleshooting.md  tuning.md
docs/demo_videos/: README.md
docs/figures/: README.md
examples/: README.md  cogvideox_generate.py  hunyuan_generate.py  vllm_omni_serve.sh  wan_generate.py
lvsa/: __init__.py  device.py  lvsa_processor.py  parallel.py  riflex.py  rope.py  sparse_attention.py
lvsa-vllm-omni/: .gitignore  Dockerfile  README.md  pyproject.toml
lvsa-vllm-omni/examples/: README.md  offline_hunyuan.py  offline_wan.py  online_client.py  online_curl.sh  serve_hunyuan.sh  serve_wan.sh
lvsa-vllm-omni/lvsa_vllm_omni/: __init__.py  _fallback.py  attention_impl.py  backend.py  config.py  global_kv.py  hunyuan_hook.py  register.py  serve.py  step_tracker.py  wan_hook.py
lvsa-vllm-omni/scripts/: README.md  integration_sweep.sh
lvsa-vllm-omni/tests/: conftest.py  test_attention_impl.py  test_config.py  test_fallback_warnings.py  test_geometry.py  test_global_kv.py  test_hunyuan_hook.py  test_integration.py  test_register.py  test_wan_hook.py
lvsa/adapters/: __init__.py  base.py  cogvideox.py  hunyuan_video.py  wan.py
skills/lvsa-add-model/: SKILL.md
skills/lvsa-quickstart/: SKILL.md
skills/lvsa-reproduce-paper/: SKILL.md
skills/lvsa-troubleshooting/: SKILL.md
skills/lvsa-tuning/: SKILL.md
skills/lvsa-vllm-omni/: SKILL.md
tests/: README.md  conftest.py  requirements.txt  test_adapters.py  test_device.py  test_parallel.py  test_riflex.py  test_rope.py  test_sparse_attention.py  test_swa_processor.py
vqeval/: .gitignore  README.md  pyproject.toml
vqeval/tests/: test_batch_csv.py  test_cli.py  test_config.py  test_evaluators.py  test_figures.py  test_normalization.py  test_report.py  test_video_loader.py
vqeval/vqeval/: __init__.py  cli.py
vqeval/vqeval/core/: config.py  pipeline.py  report.py  video_loader.py
vqeval/vqeval/evaluators/: artifact_detection.py  base.py  dynamic_quality.py  loop_quality.py  spatial_quality.py  temporal_coherence.py  text_alignment.py
vqeval/vqeval/figures/: __init__.py  batch.py  generator.py  single.py  style.py
vqeval/vqeval/models/: model_registry.py
vqeval/vqeval/normalization/: calibration.py  presets.json
vqeval/vqeval/reports/templates/: batch_report.html  single_report.html
