[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vqeval"
version = "1.0.0"
description = "AI-generated video quality assessment tool"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "LVSA Team"}]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",
    "pyiqa>=0.1.10",
    "open_clip_torch>=2.24.0",
    "mediapipe>=0.10.0",
    "scikit-image>=0.22.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "decord>=0.6.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "lpips>=0.1.4",
    "xformers>=0.0.23",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
vqeval = "vqeval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vqeval*"]
